# aurora-sun-v1

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  IMPLEMENTATION-LOG.md  Makefile  QA-REPORT.md  README.md  ROADMAP.md  TODO.md  alembic.ini  docker-compose.prod.yml  main.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE-AUDIT.md  BREACH-NOTIFICATION.md  DPIA.md  HYBRID-QUALITY-UPGRADE-PLAN.md  QA-AUDIT-CHECKLIST.md  QA-REPORT.md  SUB-PROCESSOR-REGISTRY.md  THREAT-MODEL.md  WORKFLOWS.md
docs/archive/: AUDIT-REPORT-codex-full-2026-02-14.md  AUDIT_REPORT.md  AUDIT_REPORT_2026-02-14_claude-opus-4-6.md  AUDIT_REPORT_2026-02-15_gpt-5-codex.md  QA-REPORT-phase1-only.md  QA-REPORT-stabilization-2026-02-14.md  SECURITY-AUDIT-PARANOID-2026-02-14.md  SECURITY-AUDIT-PHASE-4.md
migrations/: env.py
monitoring/: alert_rules.yml  alertmanager.yml  prometheus.yml
scripts/: backup.sh  deploy.sh
src/: __init__.py
src/agents/: __init__.py  avicenna_spec.yaml
src/agents/aurora/: __init__.py  agent.py  coherence.py  growth.py  milestones.py  narrative.py  proactive.py
src/agents/avicenna/: __init__.py  agent.py  alerts.py  spec.py  tracker.py
src/agents/tron/: __init__.py  agent.py  compliance.py  incident.py  threat_monitor.py
src/api/: __init__.py  auth.py  dependencies.py  routes.py  schemas.py
src/bot/: __init__.py  onboarding.py  webhook.py
src/config/: segment.py
src/core/: __init__.py  buttons.py  daily_workflow_hooks.py  gdpr_mixin.py  module_context.py  module_protocol.py  module_registry.py  module_response.py  segment_context.py  segment_service.py  side_effects.py
src/i18n/: __init__.py  strings.py
src/infra/: __init__.py  backup.py  health.py  middleware.py  monitoring.py  rbac.py
src/lib/: __init__.py  ai_guardrails.py  ccpa.py  circuit_breaker.py  encrypted_field.py  encryption.py  errors.py  exceptions.py  gdpr.py  gdpr_database.py  gdpr_erasure.py  gdpr_export.py  gdpr_restriction.py  gdpr_types.py  i18n.py  logging.py  security.py
src/models/: __init__.py  base.py  consent.py  daily_plan.py  goal.py  neurostate.py  session.py  task.py  user.py  vision.py
src/modules/: belief.py  capture.py  future_letter.py  habit.py  money.py  money_encryption.py  money_models.py  money_parsing.py  money_patterns.py  money_state.py  motif.py  onboarding_deep.py  planning.py  planning_handlers.py  planning_helpers.py  planning_state.py  review.py  second_brain.py
src/services/: __init__.py  coaching_engine.py  coaching_engine_full.py  crisis_service.py  dspy_optimizer.py  effectiveness.py  energy_system.py  feedback_service.py  pattern_detection.py  redis_service.py  revenue_tracker.py  ria_service.py  self_learning.py  state_store.py  tension_engine.py  user_cache.py
src/services/knowledge/: __init__.py  letta_service.py  neo4j_service.py  qdrant_service.py  sync_service.py
src/services/neurostate/: __init__.py  burnout.py  channel.py  energy.py  inertia.py  masking.py  sensory.py
src/workflows/: __init__.py  daily_graph.py  daily_workflow.py  shutdown.py
tests/: conftest.py  test_high5_fix.py
tests/src/agents/: __init__.py
tests/src/agents/aurora/: __init__.py  test_aurora_agent.py  test_coherence.py  test_growth.py  test_milestones.py  test_narrative.py  test_proactive.py
tests/src/agents/avicenna/: test_alerts.py  test_avicenna.py  test_spec.py
tests/src/agents/tron/: test_tron.py
tests/src/api/: test_api_init.py  test_api_integration.py  test_auth.py  test_dependencies.py  test_routes.py  test_schemas.py
tests/src/bot/: test_onboarding.py  test_webhook.py
tests/src/core/: test_module_registry.py  test_module_response.py  test_segment_context.py  test_segment_service.py  test_side_effects.py
tests/src/infra/: test_backup.py  test_health.py  test_middleware.py  test_monitoring.py  test_rbac.py
tests/src/lib/: __init__.py  test_ai_guardrails.py  test_ccpa.py  test_circuit_breaker.py  test_encryption.py  test_exceptions.py  test_gdpr.py  test_i18n_full.py  test_security.py
tests/src/models/: test_consent.py  test_models.py  test_neurostate_models.py  test_session.py
tests/src/modules/: test_belief.py  test_capture.py  test_future_letter.py  test_habit.py  test_money.py  test_motif.py  test_onboarding_deep.py  test_planning.py  test_review.py  test_second_brain.py
tests/src/services/: test_coaching_engine.py  test_coaching_engine_full.py  test_crisis_service.py  test_dspy_optimizer.py  test_effectiveness.py  test_energy_system.py  test_feedback_service.py  test_pattern_detection.py  test_redis_service.py  test_revenue_tracker.py  test_ria_service.py  test_self_learning.py  test_state_store.py  test_tension_engine.py  test_user_cache.py
tests/src/services/knowledge/: test_knowledge_services.py
tests/src/services/neurostate/: test_burnout.py  test_channel.py  test_energy.py  test_inertia.py  test_masking.py  test_sensory.py
tests/src/workflows/: test_daily_graph.py  test_daily_workflow.py  test_shutdown.py
