[project]
name = "aurora-sun-v1"
version = "0.1.0"
description = "AI coaching for neurodivergent people"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}

dependencies = [
    # Core
    "python-telegram-bot>=20.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",

    # AI/LLM
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "groq>=0.4.0",

    # LangGraph & DSPy
    "langgraph>=0.0.20",
    "dspy-ai>=2.1.0",
    "pydantic-ai>=0.0.8",

    # Vector & Graph
    "neo4j>=5.0.0",
    "qdrant-client>=1.7.0",

    # Memory
    "letta-client>=0.2.0",

    # Redis
    "redis>=5.0.0",

    # Security
    "cryptography>=41.0.0",
    "keyring>=23.0.0",

    # Monitoring
    "langfuse>=0.0.30",
    "prometheus-client>=0.19.0",

    # Utilities
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",

    # Logging
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "bandit>=1.7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
